Fix negative margin from Grid spacing

--- a/src/components/Portfolio.css
+++ b/src/components/Portfolio.css
@@ -36,3 +36,7 @@
     width: 60vmin;
     height: auto;
 }
+
+.experiences {
+    overflow-x: hidden;
+}
